fix: fix cards spacing

--- a/src/components/card/style.scss
+++ b/src/components/card/style.scss
@@ -1,5 +1,5 @@
 .card {
-  width: 25%;
+  width: calc(100% / 3 - 40px);
   height: 340px;
   border-radius: 10px;
   margin: 20px;
