--- a/src/containers/cards/styles.scss
+++ b/src/containers/cards/styles.scss
@@ -1,12 +1,15 @@
-.cards-container {
-    width: 90%;
-    height: 80%;
+.cards-section {
+  width: 90%;
+
+  .cards-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
-    background: #F6F6F6;
-    padding: 25px;
+    background: #f6f6f6;
+    padding: 15px;
+    margin: 25px;
     border-radius: 25px;
     box-sizing: border-box;
+  }
 }
